# docbr-rag

./: .coverage  .dockerignore  .pre-commit-config.yaml  CONTEXT.md  CONTRIBUTING.md  Dockerfile  README.md  README_DOCKER.md  __init__.py  docbr_config.yaml  docker-compose.dev.yml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  run_web_ui.py  setup.py
.github/workflows/: ci.yml
docbr_db/: chroma.sqlite3
examples/: README.md  api_rest.py  basico.py  lote.py
mobile_app/: README.md
src/docbr_rag/: __init__.py  cli.py  config.py  core.py  diff.py  exceptions.py  logging_config.py  models.py  monitoring.py  parallel.py  search.py  web_ui.py
src/docbr_rag/extractors/: __init__.py  docx.py  ocr.py  pdf.py  txt.py
tests/: README.md  __init__.py  conftest.py  pytest.ini
tests/integration/: test_workflow.py
tests/unit/: test_core.py  test_extractors.py  test_models.py
