[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docbr-rag"
version = "0.1.0"
description = "RAG especializado em documentos brasileiros — 100% local e gratuito"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Seu Nome", email = "seu@email.com" }
]
keywords = ["rag", "nlp", "brasil", "documentos", "llm", "pdf", "nfe", "contrato"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Portuguese (Brazilian)",
]

dependencies = [
    "pdfplumber>=0.10",
    "pymupdf>=1.23",
    "sentence-transformers>=2.7",
    "chromadb>=0.5",
    "ollama>=0.2",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
docbr-rag = "docbr_rag.cli:app"

[project.urls]
Homepage = "https://github.com/seu-usuario/docbr-rag"
Repository = "https://github.com/seu-usuario/docbr-rag"
Issues = "https://github.com/seu-usuario/docbr-rag/issues"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
ignore_missing_imports = true
disable_error_code = ["attr-defined", "assignment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
